--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/Theme.AppCompat.Light.NoActionBar"
         tools:targetApi="31">
         <activity
-            android:name=".ui.OderDetailFragment"
+            android:name=".ui.OrderDetailFragment"
             android:exported="false" />
         <activity
             android:name=".ui.LoginActivity"
