--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,18 @@
         tools:targetApi="31">
         <activity
             android:name=".ui.fragments.OrderDetailFragment"
-            android:exported="false" />
+            android:exported="true">
+            <meta-data
+                android:name="KAKAO_API"
+                android:value="${KAKAO_API}" />
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data android:host="oauth"
+                    android:scheme= "${KAKAO_API}" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".ui.activities.LoginActivity"
             android:exported="false" />
